k8s-playground/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8096
    - name: discovery
      protocol: UDP
      port: 7359
      targetPort: 7359
